--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         var canvas = document.getElementById("myCanvas");
         var ctx = canvas.getContext("2d");
 
+        ctx.fillStyle = "yellow";
         ctx.fillRect( 10, 10, 20, 20 );
     </script>
+    <p>Teksts pēc pamatnes.</p>
 </body>
 </html>
