--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         ctx.fillRect( 10, 10, 20, 20 );
     </script>
     <p>Teksts pēc pamatnes.</p>
+    <p>Jauna izmaiņa Git testēšanai.</p>
 </body>
 </html>
